--- a/refokus/src/components/Product.css
+++ b/refokus/src/components/Product.css
@@ -1,6 +1,6 @@
 @keyframes anime {
-    from {height: 27vh; background-color: none;}
-    to {height: 29vh; background-color: rgb(66, 66, 174);}
+    from {height: 14vw; background-color: none;}
+    to {height: 15vw; background-color: rgb(66, 66, 174);}
   }
   
 
